bad/bool_negation_of_array.example_compiler_output
ERROR
[1mbad/bool_negation_of_array.lat:4:2: [1;31merror: [0;1mcannot negate value of non-boolean type `boolean[]`[m
	!x;
	[1;32m^[m
